swaggeer for brand anf category
